# TT00BT65-3001-capstone-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  curses.cmake
docs/: dev-environment-setup.md  project-specification.md
src/: CMakeLists.txt  main.c
